crates/quarto-math/tests/integration/snapshots/integration__mathml__mathml__environments__row-spacing_display.snap
---
source: crates/quarto-math/tests/integration/mathml.rs
expression: to_mathml(&n)
---
<math xmlns="http://www.w3.org/1998/Math/MathML" display="block"><semantics><mrow><mtable columnalign="right left"><mtr><mtd><mi>a</mi></mtd><mtd><mrow><mo>=</mo><mi>b</mi></mrow></mtd></mtr><mtr><mtd><mrow><mo stretchy="false">[</mo><mn>2</mn><mi>e</mi><mi>x</mi><mo stretchy="false">]</mo><mi>c</mi></mrow></mtd><mtd><mrow><mo>=</mo><mi>d</mi></mrow></mtd></mtr></mtable></mrow><annotation encoding="application/x-tex">\begin{aligned}
a &amp;= b \\[2ex]
c &amp;= d
\end{aligned}</annotation></semantics></math>
