crates/quarto-math/tests/integration/snapshots/integration__mathml__mathml__environments__split_display.snap
---
source: crates/quarto-math/tests/integration/mathml.rs
expression: to_mathml(&n)
---
<math xmlns="http://www.w3.org/1998/Math/MathML" display="block"><semantics><mrow><mtable columnalign="right left"><mtr><mtd><mi>a</mi></mtd><mtd><mrow><mo>=</mo><mi>b</mi></mrow></mtd></mtr><mtr><mtd><mrow></mrow></mtd><mtd><mrow><mo>=</mo><mi>c</mi></mrow></mtd></mtr></mtable></mrow><annotation encoding="application/x-tex">\begin{split}
a &amp;= b \\
&amp;= c
\end{split}</annotation></semantics></math>
